# Litan

./: .gitattributes  .gitignore  .gitmodules  .swp  CMakeLists.txt  LICENSE  Litan.cxx  Litan.hxx  README.md  SConstruct  build.bat  build.sh  clear.sh  install.sh  ltnvmOld  run_tests.sh  run_transpile.sh  sconstruct
litan/: CMakeLists.txt  litan.cxx
litan/assembler/: Assembler.cxx  Assembler.hxx  AssemblerParser.cxx  AssemblerParser.hxx  Ltna.cxx  Ltna.hxx  LtnaAssembler.cxx  LtnaAssembler.hxx  LtnaAssemblerParser.cxx  LtnaAssemblerParser.hxx  LtnaInstructionBuilder.cxx  LtnaInstructionBuilder.hxx  LtnaMarkerTable.cxx  LtnaMarkerTable.hxx  LtnaNumberParser.cxx  LtnaNumberParser.hxx  LtnaPseudoAssembler.cxx  LtnaPseudoAssembler.hxx  LtnaStringDecoder.cxx  LtnaStringDecoder.hxx  LtnaTokenPackage.hxx  PseudoAssembler.cxx  PseudoAssembler.hxx  TokenPackage.hxx  cli.cxx
litan/commands/: build.cxx  build.hxx  dump.cxx  dump.hxx  exec.cxx  exec.hxx  run.cxx  run.hxx
litan/compiler/: Ltnc.cxx  Ltnc.hxx  LtncBaseTypes.hxx  LtncCmdArgs.cxx  LtncCmdArgs.hxx  LtncStructurePrinter.cxx  LtncStructurePrinter.hxx  cli.cxx
litan/program/: ByteCode.hxx  Script.cxx  Script.hxx
litan/shared/: LtnCumulatedError.cxx  LtnCumulatedError.hxx  LtnError.cxx  LtnError.hxx  LtnErrorReporter.cxx  LtnErrorReporter.hxx  LtnExtSlot.hxx  LtnFileIO.cxx  LtnFileIO.hxx  LtnFloat.cxx  LtnHeapTypes.hxx  LtnInstructions.hxx  LtnIoFormat.hxx  LtnVectorUtils.hxx  Unused.hxx  help.cxx  help.hxx  options.cxx  options.hxx  shared.cxx  shared.hxx
litan/utils/: Float.cxx  Float.hxx
litan/vm/: Environment.hxx  LtnEnvironment.hxx  LtnStackFrame.cxx  LtnStackFrame.hxx  LtnVM.cxx  LtnVM.hxx  LtnVMArray.cxx  LtnVMBitwise.cxx  LtnVMControlFlow.cxx  LtnVMDeque.cxx  LtnVMFloat.cxx  LtnVMHeap.cxx  LtnVMIO.cxx  LtnVMInt.cxx  LtnVMInt.hxx  LtnVMLogic.cxx  LtnVMMemory.cxx  LtnVMQueue.cxx  LtnVMSort.cxx  LtnVMStack.cxx  LtnVMString.cxx  LtnVMValue.cxx  LtnvmEnvironment.hxx  LtnvmVMArray.cxx  LtnvmVMBitwise.cxx  LtnvmVMControlFlow.cxx  LtnvmVMDeque.cxx  LtnvmVMFloat.cxx  LtnvmVMHeap.cxx  LtnvmVMIO.cxx  LtnvmVMInt.cxx  LtnvmVMLogic.cxx  LtnvmVMMemory.cxx  LtnvmVMRandom.cxx  LtnvmVMSort.cxx  LtnvmVMString.cxx  LtnvmVMStruct.cxx  LtnvmVMValue.cxx  VM.cxx  VM.hxx  (+1 more)
litan_native/: CMakeLists.txt  litan.h  plugin.h  types.h
litan_stdlib/: CMakeLists.txt  algorithm.ltn  bits.ltn  chrono.ltn  container.ltn  functional.ltn  io.ltn  iter.ltn  json.ltn  litan_stdlib.h  math.ltn  misc.ltn  random.ltn  string.ltn  type.ltn
litan_vm/: CMakeLists.txt  Exception.hxx  Heap.hxx  TypeTable.cxx  TypeTable.hxx  VM.cxx  VM.hxx  VMCore.hxx  VMStack.cxx  VMStack.hxx  Value.hxx  gc.cxx  litan_vm.cxx  litan_vm.hxx
litan_vm/build_in/: CMakeLists.txt  algorithm.cxx  algorithm.hxx  iter.cxx  iter.hxx  random.cxx  random.hxx  type.cxx  type.hxx
litan_vm/inst/: CMakeLists.txt  inst_alloc.cxx  inst_arithmetic.cxx  inst_at.cxx  inst_at_write.cxx  inst_bitwise.cxx  inst_build_in.cxx  inst_capture.cxx  inst_casts.cxx  inst_compare.cxx  inst_control_flow.cxx  inst_debug.cxx  inst_deref.cxx  inst_invoke.cxx  inst_iter.cxx  inst_memory.cxx  inst_newtype.cxx  inst_static.cxx  inst_struct.cxx  inst_unary.cxx  inst_values.cxx  instructions.hxx
litan_vm/native/: CMakeLists.txt  NativeCore.hxx  native.cxx  native.hxx
litan_vm/objects/: CMakeLists.txt  Clock.cxx  Clock.hxx  Coroutine.cxx  Coroutine.hxx  FunctionPointer.cxx  FunctionPointer.hxx  NativeFunctionPointer.cxx  NativeFunctionPointer.hxx  Object.cxx  Object.hxx  Plugin.hxx  RandomEngine.cxx  RandomEngine.hxx  ScriptFunctionPointer.hxx  StaticObject.hxx  Type.cxx  Type.hxx  objects.hxx
litan_vm/plugin/: CMakeLists.txt  callbacks.cxx  callbacks.hxx
litan_vm/stdlib/: CMakeLists.txt  algorithm.cxx  algorithm.hxx  array.cxx  array.hxx  bool.cxx  bool.hxx  chrono.cxx  chrono.hxx  container.cxx  container.hxx  float.cxx  float.hxx  functional.cxx  functional.hxx  int.cxx  int.hxx  io.cxx  io.hxx  iter.cxx  iter.hxx  json.cxx  json.hxx  map.cxx  map.hxx  math.cxx  math.hxx  misc.cxx  misc.hxx  null.cxx  null.hxx  plugin.cxx  plugin.hxx  queue.cxx  queue.hxx  random.cxx  random.hxx  stack.cxx  stack.hxx  string.cxx  (+7 more)
litan_vm/utils/: CMakeLists.txt  GCLock.cxx  GCLock.hxx  calc_binary.hxx  cast.cxx  cast.hxx  compare.cxx  compare.hxx  container.cxx  container.hxx  convert.cxx  convert.hxx  function.cxx  function.hxx  index.hxx  json.cxx  json.hxx  run_function.hxx  special_member.hxx  stringify.cxx  stringify.hxx  to_any.cxx  to_any.hxx  to_value.cxx  to_value.hxx  type_check.hxx
ltnc/: AddressTable.hxx  Backend.hxx  CMakeLists.txt  CompilerError.cxx  CompilerError.hxx  Config.hxx  Instructions.hxx  Label.cxx  Label.hxx  LtnBackend.cxx  LtnBackend.hxx  Ltnc.cxx  Ltnc.hxx  Namespace.cxx  Namespace.hxx  Operations.hxx  Qualifiers.cxx  Qualifiers.hxx  ReflectQuery.hxx  Reporter.hxx  Source.hxx  SourceLocation.hxx  SymbolTable.hxx  cli.cxx  labels.cxx  labels.hxx  make_jump_id.cxx
ltnc/analyze/: CMakeLists.txt  analyze.cxx  analyze.hxx  analyze_array.cxx  analyze_binary.cxx  analyze_bindings.cxx  analyze_block.cxx  analyze_call.cxx  analyze_conditional.cxx  analyze_custom_literal.cxx  analyze_definition.cxx  analyze_enum.cxx  analyze_expression.cxx  analyze_function.cxx  analyze_fx_ptr.cxx  analyze_global.cxx  analyze_if_else.cxx  analyze_iife.cxx  analyze_index.cxx  analyze_init.cxx  analyze_init_member.cxx  (+31 more)
ltnvm/: CMakeLists.txt  CalcBinary.hxx  Callable.hxx  Exception.hxx  Float.hxx  FxPointer.hxx  Heap.cxx  Heap.hxx  HeapGC.cxx  LtnVM.cxx  LtnVM.hxx  LtnVMAlgorithm.cxx  LtnVMAlloc.cxx  LtnVMArithmetic.cxx  LtnVMArray.cxx  LtnVMArrayInsert.cxx  LtnVMArrayRemove.cxx  LtnVMBitwise.cxx  LtnVMCasts.cxx  LtnVMCompare.cxx  LtnVMContainer.cxx  LtnVMContainerInsert.cxx  LtnVMContainerRemove.cxx  LtnVMControlFlow.cxx  LtnVMDebug.cxx  LtnVMFunctional.cxx  LtnVMHeap.cxx  LtnVMIO.cxx  LtnVMMath.cxx  LtnVMMemory.cxx  LtnVMRandom.cxx  LtnVMRange.cxx  LtnVMStruct.cxx  LtnVMType.cxx  LtnVMUnary.cxx  LtnVMUtils.cxx  LtnVMValues.cxx  LtnVM_buildin_algorithm.cxx  LtnVM_buildin_random.cxx  MathFunctions.hxx  (+65 more)
tmp/: 1  2  (+1 more)
(+2764 files in other folders)
