cmake_minimum_required(VERSION 3.13)

target_sources(libltnc PRIVATE 
	analyze_enum.cxx
	analyze_preset.cxx
	analyze_array.cxx
	analyze_binary.cxx
	analyze_block.cxx
	analyze_call.cxx
	analyze_expression.cxx
	analyze_function.cxx
	analyze_fx_ptr.cxx
	analyze_global.cxx
	analyze_if_else.cxx
	analyze_iife.cxx
	analyze_index.cxx
	analyze_init_member.cxx
	analyze_loops.cxx
	analyze_primitives.cxx
	analyze_read.cxx
	analyze_reflect.cxx
	analyze_return.cxx
	analyze_statement.cxx
	analyze_switch.cxx
	analyze_ternary.cxx
	analyze_throw.cxx
	analyze_typed_unary.cxx
	analyze_unary.cxx
	analyze_write.cxx
	analyze.cxx	
	cast_static.cxx
	copy_dynamic.cxx
	copy_static.cxx
	cast_utils.cxx
	compile_array.cxx
	compile_binary.cxx
	compile_block.cxx
	compile_call.cxx
	compile_conditional.cxx
	compile_expression.cxx
	compile_function.cxx
	compile_fx_ptr.cxx
	compile_global.cxx
	compile_if_else.cxx
	compile_iife.cxx
	compile_index.cxx
	compile_init_member.cxx
	compile_loops.cxx
	compile_primitives.cxx
	compile_read.cxx
	compile_reflect.cxx
	compile_return.cxx
	compile_statement.cxx
	compile_switch.cxx
	compile_ternary.cxx
	compile_throw.cxx
	compile_typed_unary.cxx
	compile_unary.cxx
	compile_write.cxx
	compile.cxx
	conversion.cxx
	instantiate_type.cxx
)

add_subdirectory(build_in)
add_subdirectory(utils)